Should be Fixed...but not

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 
 .vs/Battleship/FileContentIndex/8843e802-a498-44f6-bcb9-6fbf944895c9.vsidx
+.vs/Battleship/FileContentIndex/9bf77d1f-e8a1-4c4d-8570-240455c8e0f2.vsidx
+.vs/Battleship/FileContentIndex/5aeb2359-27b7-42b1-a43d-ac55664ddcaf.vsidx
+.vs/Battleship/FileContentIndex/36ddcd53-7e91-4eb0-9289-718c09a47a3a.vsidx
